--- a/linkhub-portal/src/main/resources/application.yml
+++ b/linkhub-portal/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/linkhub?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai #47.108.28.138
     username: root
-    password: winter
+    password: root
   # redis 的配置
   redis:
     host: 127.0.0.1
@@ -29,13 +29,12 @@ spring:
         #最大阻塞等待时间(负数表示没限制)
         max-idle: 5
         min-idle: 0
-    password: root
   # 发送邮箱配置
   mail:
     host: smtp.qq.com
     port: 465
     username: 2436197699@qq.com
-    password: gidsetgzluosdjei # 授权码
+    password: ejfxnbokkbkadibe # 授权码
     properties:
       mail:
         smtp:
