feat: claimTemporaryUser和createTemporaryUser接口实现

--- a/linkhub-portal/src/main/resources/application.yml
+++ b/linkhub-portal/src/main/resources/application.yml
@@ -63,6 +63,8 @@ secure:
       - /user/code/**
       - /user/login
       - /user/forget
+      - /user/createTemporaryUser/**
+      - /user/claimTemporaryUser
       - /im/**
 jwt:
   tokenHeader: Authorization #jwt请求头
