feat: searchUserWithUniqueName和resolveToken接口的实现

--- a/linkhub-portal/src/main/resources/application.yml
+++ b/linkhub-portal/src/main/resources/application.yml
@@ -65,6 +65,9 @@ secure:
       - /user/forget
       - /user/createTemporaryUser/**
       - /user/claimTemporaryUser
+      - /user/resolveToken/**
+      - /user/searchUserWithUniqueName/**
+      - /user/getUserSettings
       - /im/**
 jwt:
   tokenHeader: Authorization #jwt请求头
