feat: getUserSettings接口的实现

--- a/linkhub-portal/src/main/resources/application.yml
+++ b/linkhub-portal/src/main/resources/application.yml
@@ -63,10 +63,10 @@ secure:
       - /user/code/**
       - /user/login
       - /user/forget
-      - /user/createTemporaryUser/**
+      - /user/createTemporaryUser
       - /user/claimTemporaryUser
-      - /user/resolveToken/**
-      - /user/searchUserWithUniqueName/**
+      - /user/resolveToken
+      - /user/searchUserWithUniqueName
       - /user/getUserSettings
       - /im/**
 jwt:
