--- a/linkhub-portal/src/main/resources/application.yml
+++ b/linkhub-portal/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port: 8080
-
+  servlet:
+    context-path: /api
 # knife 增强模式
 knife4j:
   enable: true
@@ -8,6 +9,7 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
   #数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
